tests/baselines/reference/nodeResolution8.errors.txt
tests/cases/compiler/node_modules/a/index.d.ts(1,1): error TS2654: Proper external module that carries external typings cannot contain tripleslash references.


==== tests/cases/compiler/b.ts (0 errors) ====
    import y = require("a");
==== tests/cases/compiler/node_modules/a/ref.ts (0 errors) ====
    
    var x = 1;
    
==== tests/cases/compiler/node_modules/a/index.d.ts (1 errors) ====
    /// <reference path="ref.ts"/>
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2654: Proper external module that carries external typings cannot contain tripleslash references.
    export declare var y;
    
    